--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "clean": "rm -rf lib",
     "build": "tsc",
     "pretest": "npm run clean && npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\"",
     "preversion": "npm run clean && npm run build"
   }
 }
